# android-cli-rust

./: .gitignore  CLAUDE.md  Cargo.toml  DIFF_REPORT.md  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
protos/: local.proto  sdk.proto
src/: lib.rs  main.rs
src/adb/: mod.rs
src/cli/: commands.rs  context.rs  handlers.rs  mod.rs
src/config/: constants.rs  env.rs  license.rs  mod.rs
src/create/: mod.rs
src/describe/: mod.rs
src/docs/: mod.rs
src/docs/service/: kb_doc.rs  kb_download.rs  kb_indexer.rs  kb_search.rs  mod.rs
src/emulator/: avd.rs  mod.rs
src/http/: downloader.rs  mod.rs
src/interact/: mod.rs  point.rs  rect.rs  region_group.rs
src/layout/: key.rs  mod.rs  serializer.rs
src/metrics/: mod.rs
src/screen/: mod.rs
src/sdk/: arm_sdk.rs  diff.rs  local.rs  manager.rs  mod.rs  model.rs  protobuf.rs  repository.rs  storage.rs
src/services/: mod.rs  sys_info.rs
src/skills/: location.rs  manager.rs  mod.rs
src/template/: mod.rs
src/update/: mod.rs  updater.rs
src/utils/: mod.rs  paths.rs
src/vision/: cluster.rs  digits.rs  edges.rs  image_utils.rs  mod.rs
