[package]
name = "android-cli"
version = "0.1.0"
edition = "2021"
authors = ["Android CLI Rust Implementation"]
description = "Pure Rust implementation of Android CLI tools"

[dependencies]
# CLI parsing (picocli equivalent)
clap = { version = "4", features = ["derive", "string"] }

# HTTP client for downloads (use rustls for cross-compilation)
reqwest = { version = "0.12", features = ["blocking", "stream", "rustls-tls"], default-features = false }

# Protobuf support
prost = "0.14"

# SHA-1 hashing for CAS storage
sha1 = "0.11"

# SHA-256 for verification
sha2 = "0.11"

# ZIP handling
zip = { version = "8", default-features = false, features = ["deflate"] }

# Directory traversal
walkdir = "2"

# Progress bars
indicatif = "0.18"

# Temporary files
tempfile = "3"

# User directories
dirs = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"  # JSON serialization for SDK model
serde_yaml = "0.9"

# Async runtime (for tokio-based operations)
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util"] }
futures-util = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Path utilities
regex = "1"

# URL parsing and validation
url = "2"

# URL encoding
urlencoding = "2"

# Image processing (for vision module)
image = "0.25"
imageproc = "0.26"

# Full-text search engine (Lucene equivalent)
tantivy = "0.26"

# LRU cache for search results
lru = "0.17"

# Character encoding detection
encoding_rs = "0.8"

[build-dependencies]
prost-build = "0.14"

[lib]
name = "android_cli"
path = "src/lib.rs"

[[bin]]
name = "android"
path = "src/main.rs"